# PTCG_deck_analyze

./: .gitignore  README.md  USER_GUIDE.md  analyze_deck_structure.py  card_debug.html  debug_output.txt  deck_debug.html  inspect_db.py  main.py  pyproject.toml  stats_app.py  unique_cards.txt
PTCG_card_data/: .gitignore  README.md  pyproject.toml  serve_err.txt  serve_out.txt
PTCG_card_data/ptcg_tw/: __init__.py  __main__.py  bundle.js  db.py  jp_card.html  jp_search.html  scraper.py
data/: limitless_jp_map.json  pokemon_names.txt  scraped_data.json
scripts/: benchmark.py  check_jp_db.py  check_pagination.py  compare_dbs.py  debug_api_content.py  debug_api_live.py  debug_db.py  debug_html.py  debug_mapper.py  debug_specific_card.py  extract_archetypes.py  find_unmapped_cards.py  inspect_pagination.py  reproduce_mapper_skip.py  test_weeks.py  verify_deep_analysis.py  verify_limit.py  verify_limit_simple.py  verify_pagination.py  verify_timeline.py  verify_week_switching.py
src/: __init__.py  main.py  translation.py
src/analyzer/: __init__.py  archetype.py  cards.py  matchups.py  meta_insight.py  statistics.py  trends.py  winrate.py
src/card_db/: __main__.py  effects.py  jp_list.html  jp_scraper.py  llm.py  pokemon-card-common.js  serve.py
src/scraper/: __init__.py  limitless.py  mapper.py  models.py
src/utils/: __init__.py  card_db.py  date_utils.py
src/web/: __init__.py  app.py  data_manager.py
src/web/templates/: index.html
