[project]
name = "ptcg-deck-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "lxml>=6.0.2",
    "pandas>=2.1.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.13.3",
    "streamlit>=1.38",
]
